--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "normalize-css": "^5.0.0",
     "device.js": "devicejs#^0.2.7",
     "jquery-placeholder": "^2.3.1",
-    "jquery-smartresize": "*"
+    "jquery-smartresize": "*",
+    "swiper": "^3.4.2"
   }
 }
