--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "device.js": "devicejs#^0.2.7",
     "jquery-placeholder": "^2.3.1",
     "jquery-smartresize": "*",
-    "swiper": "^3.4.2"
+    "swiper": "^3.4.2",
+    "gsap": "^1.19.1"
   }
 }
